# Modelizer

./: .gitignore  README.md  pyproject.toml  train_all_datasets.sh  train_all_subjects.sh
modelizer/: __init__.py  dataset.py  learner.py  llm.py  metrics.py  optimizer.py  trainer.py  transformer.py  utils.py
modelizer/generators/: expression.py  fuzzer.py  grammars.py  markup.py  mathml.py  query.py  utils.py
modelizer/subjects/: latexify.py  mstic.py  pandoc.py  py_asciimath.py
modelizer/tokenizer/: config.py  expression.py  generic.py  mapping.py  markup.py  mathml.py  query.py  sentencepiece.py
scripts/: compute-params.py  compute-scores.py  data-generate.py  data-parse.py  environment_setup.sh  environmnet_setup.sh  eval-llm.py  model-eval.py  model-llm.py  model-setup.py  model-train.py  model-tune.py
