[project]
name = "modelizer"
authors = [{name = "Tural Mammadov", email = "tural.mammadov@cispa.de"}]
version = "1.0.0"
description = "Modelizer - is a framework for learning models from BlackBox systems using Input-Output examples"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["deep learning", "program analysis", "machine learning", "artificial intelligence", "reverse engineering", "fuzzing", "software testing"]
classifiers = [
    "Framework :: Modelizer",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Analysis",
    "Topic :: Software Development :: Software Testing",
    "Topic :: Software Development :: Reverse Engineering",
]

dependencies = [
    'chardet',
    'func-timeout',
    'fuzzingbook>=1.2',
    'jiwer>=3.0.3',
    'joblib',
    'latexify-py==0.2.0',
    'levenshtein>=0.23.0',
    'msticpy==2.9.0',
    'nltk>=3.8.1',
    'openpyxl',
    'optuna',
    'pandas',
    'pandoc==2.3',
    'py-asciimath==0.3.0',
    'pylev>=1.4.0',
    'requests',
    'sqlparse==0.4.4',
    'torch>=2.0.1',
    'torchtext',
    'tqdm',
]

[tool.setuptools.packages.find]
where = ["modelizer"]  # list of folders that contain the packages (["."] by default)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/2ral/modelizer"
"Bug Tracker" = "https://github.com/2ral/modelizer/issues"
